Update to Jackson 3.x